# integration-support-hub

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  config.py  database.py  logging_config.py  main.py  models.py  schemas.py
app/routers/: __init__.py  auth_routes.py  integration_routes.py  log_routes.py
app/services/: __init__.py  integration_service.py  soap_service.py  troubleshooting_service.py
app/utils/: xml_utils.py
docs/: arquitetura.md
notebooks/: 01_estudo_do_projeto.ipynb
postman/: Integration_Support_Hub.postman_collection.json  README.md
tests/: conftest.py  test_auth.py  test_integrations.py  test_soap.py
